fixed spelling error

--- a/docs/40_topics/01_fair.mdx
+++ b/docs/40_topics/01_fair.mdx
@@ -25,7 +25,7 @@ Researcher – and the computers working on their behalf – must be able to fin
 
 ### F1. (meta)data are assigned a globally unique and persistent identifier
 
-A globally unique and persistent identifier (PID) helps both machines and humans find the data in the first place. The registry services that make these identifiers available work to maintain the link to the resource they are associated with, in this case a dataset. A common example is the Digital Object Identifer, or [DOI](https://doi.org/10.1000/182). This type of identifier ensures the object it refers to, such as a dataset or a journal publication, are not only findable but also citable. As with many journals, scientific data repositories oftentimes assign a DOI automatically. The Registry of Research Data Repositores, [re3data](https://www.re3data.org/), indicates whether a given repository assigns an identifier, along with the PID type. For example, both the [The Cambridge Structural Database (CSD)](https://www.ccdc.cam.ac.uk/solutions/csd-system/components/csd/) and the [Chemotion Repository](https://www.chemotion-repository.net/) assign DOIs to each dataset deposited. Researchers must be aware of this option when searching for a suitable repository, while repositories should offer this service.
+A globally unique and persistent identifier (PID) helps both machines and humans find the data in the first place. The registry services that make these identifiers available work to maintain the link to the resource they are associated with, in this case a dataset. A common example is the Digital Object Identifer, or [DOI](https://doi.org/10.1000/182). This type of identifier ensures the object it refers to, such as a dataset or a journal publication, are not only findable but also citable. As with many journals, scientific data repositories oftentimes assign a DOI automatically. The Registry of Research Data Repositories, [re3data](https://www.re3data.org/), indicates whether a given repository assigns an identifier, along with the PID type. For example, both the [The Cambridge Structural Database (CSD)](https://www.ccdc.cam.ac.uk/solutions/csd-system/components/csd/) and the [Chemotion Repository](https://www.chemotion-repository.net/) assign DOIs to each dataset deposited. Researchers must be aware of this option when searching for a suitable repository, while repositories should offer this service.
 
 ### F2. data are described with rich metadata (defined by R1 below)
 
