delete links to data analysis article

--- a/docs/10_domains/10_synthetic_chemistry.mdx
+++ b/docs/10_domains/10_synthetic_chemistry.mdx
@@ -65,7 +65,7 @@ The main goal of a synthetic organic or inorganic chemist is to synthesise desir
 
 ## Data analysis:
 
-- Research data are processed, [analysed](/docs/problems/data_analysis) and compared (also to data of other experiments) within the Chemotion ELN.
+- Research data are processed, analysed and compared (also to data of other experiments) within the Chemotion ELN.
 - Optionally, preprocessing of digital data with software of analytical device before data are transferred to the Chemotion ELN (cf. data producing methods).
 - A detailed view, evaluation and interpretation of results is carried out with the Chemotion ELN features.
 
