--- a/docs/10_domains/30_physical_chemistry.mdx
+++ b/docs/10_domains/30_physical_chemistry.mdx
@@ -55,7 +55,7 @@ This is followed by a more or less sophisticated and time-consuming analysis of 
 ** *This table will be continuously updated with new recommendations on interoperable open file formats.**
 
 ## Data analysis:
-- Research data are processed, [analysed](/docs/problems/data_analysis) and compared (also to data of other experiments) within the Chemotion ELN, when possible.
+- Research data are processed, analysed and compared (also to data of other experiments) within the Chemotion ELN, when possible.
 - Otherwise, (pre)processing and analysing of obtained digital data with software of analytical device before data are transferred to the Chemotion ELN (cf. data producing methods).
 - A detailed view, evaluation and comprehensible interpretation of results is carried out with the Chemotion ELN features or other open non-proprietary software tools.
 
