Draft link buttons on guide pages

--- a/docs/20_role/00_guide.mdx
+++ b/docs/20_role/00_guide.mdx
@@ -4,12 +4,12 @@ title: "Guide"
 
 Looking for information on managing research data in chemistry? Choose your role and find solutions for role-specific data management problems.
 
-[Research Group Leader](/docs/role/research_group_leader)
+[**`Research Group Leader`**](/docs/role/research_group_leader)
 
-[Research Group Member](/docs/role/research_group_member)
+[**`Research Group Member`**](/docs/role/research_group_member)
 
-[Student](/docs/role/student)
+[**`Student`**](/docs/role/student)
 
-[Data Steward](/docs/role/data_steward)
+[**`Data Steward`**](/docs/role/data_steward)
 
-[Service Administrator](/docs/role/service_administrator)
+[**`Service Administrator`**](/docs/role/service_administrator)
