--- a/docs/10_domains/00_guide.mdx
+++ b/docs/10_domains/00_guide.mdx
@@ -22,7 +22,7 @@ Click on a link below to get started with your chemical domain. The domain-speci
 
 ![synthetic](/img/OC.png) [**`Synthetic Organic/Inorganic Chemistry`**](/docs/domains/synthetic_chemistry)
 
-![analytic](/img/an.png) [**`Analytical Chemistry``**](/docs/domains/analytical_chemistry)
+![analytic](/img/an.png) [**`Analytical Chemistry`**](/docs/domains/analytical_chemistry)
 
 ![physical](/img/PC.png) [**`Physical Chemistry`**](/docs/domains/physical_chemistry)
 
