chore: rework domain menu

--- a/docs/10_domains/00_guide.mdx
+++ b/docs/10_domains/00_guide.mdx
@@ -2,4 +2,9 @@
 title: "Guide"
 ---
 
-Guide for User profiles as point of entry
+import DomainMenu from '/src/components/DomainFeatures';
+
+Looking for information on managing research data in chemistry? Choose your chemical domain and find discipline-specific help on research data management.
+
+<DomainMenu />
+
