chore: add Role buttons

--- a/docs/20_role/00_guide.mdx
+++ b/docs/20_role/00_guide.mdx
@@ -2,14 +2,8 @@
 title: "Guide"
 ---
 
+import RoleFeatures from '/src/components/RoleFeatures.js';
+
 Looking for information on managing research data in chemistry? Choose your role and find solutions for role-specific data management problems.
 
-[Research Group Leader](/docs/role/research_group_leader)
-
-[Research Group Member](/docs/role/research_group_member)
-
-[Student](/docs/role/student)
-
-[Data Steward](/docs/role/data_steward)
-
-[Service Administrator](/docs/role/service_administrator)
+<RoleFeatures />
