Revert "Update 00_guide.mdx"
This reverts commit e29c4419f06fca14430088462d1d506c23dfdd81.

--- a/docs/10_domains/00_guide.mdx
+++ b/docs/10_domains/00_guide.mdx
@@ -49,7 +49,7 @@ Click on a link below to get started with your chemical domain. The domain-speci
 
 ![bio](/img/BC2.png) <form action="https://nfdi4chem.chemie.uni-mainz.de/knowledge_base/docs/domains/biochemistry/" method="get" target="_self"><button type="submit">Biochemistry</button></form>
 
-![pharma](/img/pharma.png) <form action="https://nfdi4chem.chemie.uni-mainz.de/knowledge_base/docs/domains/pharmaceutical_chemistry/" method="get" target="_self"><button type="submit">Pharmaceutical Chemistry</button></form>
+![pharma](/img/pharma.png) <form action="https://nfdi4chem.chemie.uni-mainz.de/knowledge_base/docs/domains/pharmaceutical_chemistry/" method="get" target="_self"><button type="submit">Phyarmaceutical Chemistry</button></form>
 
 ![computational](/img/comp.png) <form action="https://nfdi4chem.chemie.uni-mainz.de/knowledge_base/docs/domains/computational_chemistry/" method="get" target="_self"><button type="submit">Computational Chemistry</button></form>
 
