Revert "Update 00_guide.mdx"
This reverts commit eadfb7925dc4775ca51891286c560a5d96f5ddf2.

--- a/docs/10_domains/00_guide.mdx
+++ b/docs/10_domains/00_guide.mdx
@@ -18,7 +18,7 @@ The domain-specific profiles provide an overview of the individual RDM steps. Th
 
 Click on a link below to get started with your chemical domain. The domain-specific profiles will be continuously updated based on new developments and feedback.
 
-:::info Getting started:
+:::info Getting started
 
 ![synthetic](/img/OC.png) [**`Synthetic Organic/Inorganic Chemistry`**](/docs/domains/synthetic_chemistry)
 
