Revert "Draft link buttons on guide pages"
This reverts commit 6eaa89f1074f86a3376144bc204ad0ac44598263.

--- a/docs/10_domains/00_guide.mdx
+++ b/docs/10_domains/00_guide.mdx
@@ -20,18 +20,20 @@ Click on a link below to get started with your chemical domain. The domain-speci
 
 :::info Getting started
 
-![synthetic](/img/OC.png) [**`Synthetic Organic/Inorganic Chemistry`**](/docs/domains/synthetic_chemistry)
+![synthetic](/img/OC.png) <form action="https://nfdi4chem.chemie.uni-mainz.de/knowledge_base/docs/domains/synthetic_chemistry/" method="get" target="_blank"><button type="submit">Synthetic Organic/Inorganic Chemistry</button></form>
 
-![analytic](/img/an.png) [**`Analytical Chemistry``**](/docs/domains/analytical_chemistry)
+![analytic](/img/an.png) <form action="https://nfdi4chem.chemie.uni-mainz.de/knowledge_base/docs/domains/analytical_chemistry/" method="get" target="_blank"><button type="submit">Analytical Chemistry</button></form>
 
-![physical](/img/PC.png) [**`Physical Chemistry`**](/docs/domains/physical_chemistry)
+![physical](/img/PC.png) <form action="https://nfdi4chem.chemie.uni-mainz.de/knowledge_base/docs/domains/physical_chemistry/" method="get" target="_blank"><button type="submit">Physical Chemistry</button></form>
 
-![polymer](/img/polymer.png) [**`Polymer Chemistry`**](/docs/domains/polymer_chemistry)
+![polymer](/img/polymer.png) <form action="https://nfdi4chem.chemie.uni-mainz.de/knowledge_base/docs/domains/polymer_chemistry/" method="get" target="_blank"><button type="submit">Polymer Chemistry</button></form>
 
-![bio](/img/BC2.png) [**`Biochemistry`**](/docs/domains/biochemistry)
+![bio](/img/BC2.png) <form action="https://nfdi4chem.chemie.uni-mainz.de/knowledge_base/docs/domains/biochemistry/" method="get" target="_blank"><button type="submit">Biochemistry</button></form>
 
-![pharma](/img/pharma.png) [**`Pharmaceutical Chemistry`**](/docs/domains/pharmaceutical_chemistry)
+![pharma](/img/pharma.png) <form action="https://nfdi4chem.chemie.uni-mainz.de/knowledge_base/docs/domains/pharmaceutical_chemistry/" method="get" target="_blank"><button type="submit">Pharmaceutical Chemistry</button></form>
 
-![computational](/img/comp.png) [**`Computational Chemistry`**](/docs/domains/computational_chemistry)
-
+![computational](/img/comp.png) <form action="https://nfdi4chem.chemie.uni-mainz.de/knowledge_base/docs/domains/computational_chemistry/" method="get" target="_blank"><button type="submit">Computational Chemistry</button></form>
 :::
+
+
+
