Revert "Draft domains guide buttons"
This reverts commit 20cf756f21400c9333c50b7e353196c303a8b631.

--- a/docs/10_domains/00_guide.mdx
+++ b/docs/10_domains/00_guide.mdx
@@ -4,36 +4,19 @@ title: "Guide"
 
 Looking for information on managing research data in chemistry? Choose your chemical domain and find discipline-specific help on research data management.
 
-:::info Info: 
-The domain-specific profiles provide an overview of the individual RDM steps. The following topics are presented in detail:
+:::info 
 
-- Summary of domain-specific profiles
-- Type of experiments
-- Planning of experiments
-- Documentation of experiments
-- Data producing methods (including a table with recommendations on interoperable open file formats)
-- Data analysis
-- Publication of research data
+![synthetic](/img/OC.png) [Synthetic Organic/Inorganic Chemistry](/docs/domains/synthetic_chemistry)
+
+![analytic](/img/an.png) [Analytical Chemistry](/docs/domains/analytical_chemistry)
+
+![physical](/img/PC.png) [Physical Chemistry](/docs/domains/physical_chemistry)
+
+![polymer](/img/polymer.png) [Polymer Chemistry](/docs/domains/polymer_chemistry)
+
+![bio](/img/BC2.png) [Biochemistry](/docs/domains/biochemistry)
+
+![pharma](/img/pharma.png) [Pharmaceutical Chemistry](/docs/domains/pharmaceutical_chemistry)
+
+![computational](/img/comp.png) [Computational Chemistry](/docs/domains/computational_chemistry)
 :::
-
-Click on a link below to get started with your chemical domain. The domain-specific profiles will be continuously updated based on new developments and feedback.
-
-:::info Getting started
-
-![synthetic](/img/OC.png) <form action="https://nfdi4chem.chemie.uni-mainz.de/knowledge_base/docs/domains/synthetic_chemistry/" method="get" target="_blank"><button type="submit">Synthetic Organic/Inorganic Chemistry</button></form>
-
-![analytic](/img/an.png) <form action="https://nfdi4chem.chemie.uni-mainz.de/knowledge_base/docs/domains/analytical_chemistry/" method="get" target="_blank"><button type="submit">Analytical Chemistry</button></form>
-
-![physical](/img/PC.png) <form action="https://nfdi4chem.chemie.uni-mainz.de/knowledge_base/docs/domains/physical_chemistry/" method="get" target="_blank"><button type="submit">Physical Chemistry</button></form>
-
-![polymer](/img/polymer.png) <form action="https://nfdi4chem.chemie.uni-mainz.de/knowledge_base/docs/domains/polymer_chemistry/" method="get" target="_blank"><button type="submit">Polymer Chemistry</button></form>
-
-![bio](/img/BC2.png) <form action="https://nfdi4chem.chemie.uni-mainz.de/knowledge_base/docs/domains/biochemistry/" method="get" target="_blank"><button type="submit">Biochemistry</button></form>
-
-![pharma](/img/pharma.png) <form action="https://nfdi4chem.chemie.uni-mainz.de/knowledge_base/docs/domains/pharmaceutical_chemistry/" method="get" target="_blank"><button type="submit">Pharmaceutical Chemistry</button></form>
-
-![computational](/img/comp.png) <form action="https://nfdi4chem.chemie.uni-mainz.de/knowledge_base/docs/domains/computational_chemistry/" method="get" target="_blank"><button type="submit">Computational Chemistry</button></form>
-:::
-
-
-
