fix: small technical improvements

--- a/docs/10_domains/00_guide.mdx
+++ b/docs/10_domains/00_guide.mdx
@@ -2,9 +2,9 @@
 title: "Guide"
 ---
 
-import DomainMenu from '/src/components/DomainFeatures';
+import DomainFeatures from '/src/components/DomainFeatures';
 
 Looking for information on managing research data in chemistry? Choose your chemical domain and find discipline-specific help on research data management.
 
-<DomainMenu />
+<DomainFeatures />
 
