--- a/docs/30_problems/30_data_organisation.mdx
+++ b/docs/30_problems/30_data_organisation.mdx
@@ -29,6 +29,8 @@ To make a long story short: It's mainly about describing how and who will work w
 
 The result should be descriptive documents which files in the course of the daily work routines, on which status (for example original file, temporary work file; Draft, intermediate version, final version), where (workstation PC, central file server, Database) and for how long (temporarily, project duration, long-term availability) in which format are saved.
 
+<img alt="small data handout" src='/docs/30_problems/img/en_data_handout.png' width="600" align="center" vspace="10" hspace="10" />
+
 
 ### Technical implementations
 
@@ -38,6 +40,8 @@ Data security affects all technical and organisational issues to protect the dat
 
 
 ## Synopsis
+
+<img alt="small data handout" src='/docs/30_problems/img/en_data_orgsteps.png' width="400" align="right" vspace="10" hspace="10" />
 
 Don't rush one's fences and take small steps first - The organisation of research data is primarily an organisational problem that is accompanied and supported by technological measures:
 - Record of status quo:
