--- a/docs/30_problems/30_data_organisation.mdx
+++ b/docs/30_problems/30_data_organisation.mdx
@@ -3,14 +3,14 @@ title: "Data Organisation"
 ---
 
 :::info summary quote:
-Simply making your data „open“ does not make your data usable. Usability is the result of other people being able to make sense of your data: the quality of your filenames, your folder structure and your documentation greatly contribute to the level of reusability of your data. It is neither difficult nor time-consuming to maintain your data in a way that invites other researchers to investigate and explore.
+> Simply making your data „open“ does not make your data usable. Usability is the result of other people being able to make sense of your data: the quality of your filenames, your folder structure and your documentation greatly contribute to the level of reusability of your data. It is neither difficult nor time-consuming to maintain your data in a way that invites other researchers to investigate and explore.
 
 _Andreas von der Dunk, Technische Universität Dresden, Service Center Research Data_
 :::
 
 ## General basics
 
-<img alt="data for future generations" src='./img/data_1517.png' width="250" align="right" vspace="10" hspace="10" />
+<img alt="data for future generations" src='../img/data_1517.png' width="250" align="right" vspace="10" hspace="10" />
 
 A clean and comprehensible organisation of data and documents are an important part of good scientific practice and an important step to realise research data management according to the [FAIR data principles](/docs/topics/fair). 
 
@@ -29,7 +29,7 @@ To make a long story short: It's mainly about describing how and who will work w
 
 The result should be descriptive documents which files in the course of the daily work routines, on which status (for example original file, temporary work file; Draft, intermediate version, final version), where (workstation PC, central file server, Database) and for how long (temporarily, project duration, long-term availability) in which format are saved.
 
-<img alt="small data handout" src='./img/en_data_handout.png' width="600" align="center" vspace="10" hspace="10" />
+<img alt="small data handout" src='../img/en_data_handout.png' width="600" align="center" vspace="10" hspace="10" />
 
 
 ### Technical implementations
@@ -41,7 +41,7 @@ Data security affects all technical and organisational issues to protect the dat
 
 ## Synopsis
 
-<img alt="small data handout" src='./img/en_data_orgsteps.png' width="400" align="right" vspace="10" hspace="10" />
+<img alt="small data handout" src='../img/en_data_orgsteps.png' width="400" align="right" vspace="10" hspace="10" />
 
 Don't rush one's fences and take small steps first - The organisation of research data is primarily an organisational problem that is accompanied and supported by technological measures:
 - Record of status quo:
