--- a/docs/40_topics/01_fair.mdx
+++ b/docs/40_topics/01_fair.mdx
@@ -7,29 +7,29 @@ author: "Nicole A. Parks"
 
 ## Introduction
 
-The FAIR Data Principles were [published](https://doi.org/10.1038/sdata.2016.18) after being defined at the [Lorentz Workshop](https://www.lorentzcenter.nl/) in 2014. These principles serve as guidelines to both those who publish data, e.g. researchers, as well as those who preserve data, e.g. repository or archive service providers. This is an important distinction, highlighting that a researcher's data can only be as FAIR as the infrastructure and services available to them.
+The [FAIR Data Principles](https://doi.org/10.1038/sdata.2016.1) were published after being defined at the [Lorentz Workshop](https://www.lorentzcenter.nl/) in 2014.
+These principles serve as guidelines to both those who publish data, e.g. researchers, as well as those who preserve data, e.g. repository or archive service providers. This is an important distinction, highlighting that a researcher’s data can only be as FAIR as the infrastructure and services available to them.
 
-Keeping in mind the long-term goal of making scientific data reusable to others by creating systematic order in the ever-growing mound of data arising from research, the FAIR Data Principles place a strong focus on machine-readable (meta)data. While humans must be able to find and understand the published datasets as well, computers will be tasked with sifting through large amounts of data and determining what datasets are relevant to the intended purpose and how they can be reused.
+Keeping in mind the long-term goal of making scientific data reusable to others by creating systematic order in the ever-growing mound of data arising from research, the FAIR Data Principles place a strong focus on machine-readable (meta)data. While humans must be able to find and understand the published datasets as well, computers will be tasked with sifting through large amounts of data and determining what datasets are relevant to the intended purpose and how they can be reused. To this end, not only is it important that humans are able to understand and find the data but, more importantly, machines need to be able to search through available datasets and determine which ones are of use for the intended purpose.
 
-To this end, not only is it important that humans are able to understand and find the data but, more importantly, machines need to be able to search through available datasets and determine which ones are of use for the intended purpose.
+Reusing well-curated research data, makes researchers’ tasks easier, enabling them to build upon previous research. Furthermore, data reuse has the potential for large stores of data to be mined for machine-learning applications. For example, large amounts of synthesis data could lead to the virtual development of new synthesis methods or the discovery of new compounds.
 
-In chemistry, reusing well-curated data, on the one hand, makes researchers' tasks easier, enabling them to build upon previous research. Furthermore, data reuse has the potential for large stores of data to be mind for machine-learning applications. For example, large amounts of synthesis data could lead to the virtual development of new synthesis methods or the discovery of new compounds.
-
-The deposition of crystallographic data in a standardized file format (CIF) into a repository such as the [Cambridge Crystallographic Data Centre](https://www.ccdc.cam.ac.uk/), required by many leading journals in the chemical community, is the primary example of the FAIR Data Principles in action. To broaden the scope of such standards, NFDI4Chem is working towards creating an infrastructure for FAIR data in Germany while training researchers in using the available infrastructure to ensure their data is as FAIR as can be.
-
+In chemistry, the deposition of crystallographic data in a standardized file format ([CIF](https://www.iucr.org/resources/cif/spec/version1.1/cifsyntax)) into a repository such as the [Cambridge Crystallographic Data Centre](https://www.ccdc.cam.ac.uk/), required by many leading journals in the chemical community, is the primary example of the FAIR Data Principles in action. To broaden the scope of such standards, [NFDI4Chem](https://www.nfdi4chem.de/) is working towards creating an infrastructure for FAIR data in Germany while training researchers in using the available infrastructure to ensure their data is as FAIR as can be.
 In the following, we answer the questions: What makes data FAIR? What do researchers and those who provide data preservation services need to consider?
 
 ## Findable
 
-Researchers – and the computers working on their behalf – must be able to find datasets to be able to reuse them. Therefore, the first guideline of the FAIR Data Principles outlines methods to ensure a dataset's discovery.
+Researchers — and the computers working on their behalf — must be able to find datasets to be able to reuse them. Therefore, the first guideline of the FAIR Data Principles outlines methods to ensure a dataset’s discovery.
 
 ### F1. (meta)data are assigned a globally unique and persistent identifier
 
-A globally unique and persistent identifier (PID) helps both machines and humans find the data in the first place. The registry services that make these identifiers available work to maintain the link to the resource they are associated with, in this case, a dataset. A common example is the Digital Object Identifier, or [DOI](https://doi.org/10.1000/182). This type of identifier ensures the object it refers to, such as a dataset or a journal publication, are not only findable but also citable. As with many journals, scientific data repositories oftentimes assign a DOI automatically. The Registry of Research Data Repositories, [re3data](https://www.re3data.org/), indicates whether a given repository assigns an identifier, along with the PID type. For example, both the [The Cambridge Structural Database (CSD)](https://www.ccdc.cam.ac.uk/solutions/csd-system/components/csd/) and the [Chemotion Repository](https://www.chemotion-repository.net/) assign DOIs to each dataset deposited. Researchers must be aware of this option when searching for a suitable repository, while repositories should offer this service.
+A globally unique and persistent identifier (PID) helps both machines and humans find the data in the first place. These PIDs are essential for research as they guarantee the availability of the associated resource, in this case a dataset. The registry services that make these identifiers available work to maintain the link to the resource, thus avoiding dead links. This ensures the resource remains findable and may be referenced simply by the use of its PID.
+
+A common example of a citable PID is the Digital Object Identifier, or [DOI](https://doi.org/10.1000/182). As with many journals, scientific data repositories oftentimes assign a DOI automatically. The Registry of Research Data Repositories, [re3data](https://www.re3data.org/), indicates whether a given repository assigns an identifier, along with the PID type. For example, both the [The Cambridge Structural Database (CSD)](https://www.ccdc.cam.ac.uk/solutions/csd-system/components/csd/) and the [Chemotion Repository](https://www.chemotion-repository.net/) assign DOIs to each dataset deposited. Researchers must be aware of this option when searching for a suitable repository, while repositories should offer this service.
 
 ### F2. data are described with rich metadata (defined by R1 below)
 
-The focus here lies on making the (meta)data findable and allowing computers and humans to quickly understand the dataset's contents. Therefore, rich discovery metadata in a standardized format is an essential component in the plurality of metadata described by R1 below. This information may include, but is not limited to:
+Data need to be sufficiently described in order to make them both findable and reusable. Hence, the specific focus here lies on making the (meta)data findable by using rich discovery metadata in a standardized format and allowing computers and humans to quickly understand the dataset’s contents. This is an essential component in the plurality of metadata described by R1 below. This information may include, but is not limited to:
 
 - the context on what the dataset is, how it was generated, and how it can be interpreted,
 - the data quality,
@@ -37,7 +37,7 @@ The focus here lies on making the (meta)data findable and allowing computers and
 - what other data may be related (linked via its PID), and
 - associated journal publications and their DOI.
 
-Repositories should provide researchers with a fillable application profile that allows researchers to give extensive and precise information on their deposited datasets. For example, the Chemotion Repository uses, among others, the [Datacite Metadata Schema 4.0](http://doi.org/10.5438/0012) to build its application profile, a schema specifically created for the publication and citation of research data. It includes an assortment of mandatory, recommended, and optional metadata properties, allowing for a rich description of the deposited dataset. For those publishing data, always keep in mind: the more information provided, the better.
+Repositories should provide researchers with a fillable [application profile](https://en.wikipedia.org/wiki/Application_profile) that allows researchers to give extensive and precise information on their deposited datasets. For example, the Chemotion Repository uses, among others, the [Datacite Metadata Schema 4.0](http://doi.org/10.5438/0012) to build its application profile, a schema specifically created for the publication and citation of research data. It includes an assortment of mandatory, recommended, and optional metadata properties, allowing for a rich description of the deposited dataset. For those publishing data, always keep in mind: the more information provided, the better.
 
 ### F3. metadata clearly and explicitly include the identifier of the data it describes
 
@@ -105,7 +105,7 @@ Related to F2 above, the focus here lies on whether the data, once found, is use
 - Lab conditions
 - Any limitations to the data
 - Software and versions used for acquisition and processing
-Repositories should provide data publishers with the opportunity to include a plurality of information in their metadata. This includes giving a wide range of optional and free-fill fields for data publishers to complete.
+  Repositories should provide data publishers with the opportunity to include a plurality of information in their metadata. This includes giving a wide range of optional and free-fill fields for data publishers to complete.
 
 #### R1.1. (meta)data are released with a clear and accessible data usage license
 
