--- a/docs/40_topics/20_repositories.mdx
+++ b/docs/40_topics/20_repositories.mdx
@@ -2,15 +2,49 @@
 title: "Repositories"
 ---
 
+## Introduction
 
-Article about Repositories
+Repositories are locations where digital objects are stored and made available to the public or data users. They can be regarded as the core of data sharing as they provide platforms to acquire, store, archive, publish, curate, preserve, and access data.
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ut dolor a justo iaculis sagittis. Nullam sit amet sodales ligula. Nam vel turpis ante. Ut vestibulum, urna ut porttitor volutpat, nisi massa malesuada ex, vitae mattis lorem nisi ac lorem. Fusce bibendum nec enim at tincidunt. Phasellus convallis magna dui, eget cursus eros bibendum id. Phasellus eu lacinia quam. Morbi venenatis suscipit elit ut consectetur. Praesent ut quam ipsum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Quisque non faucibus massa. Duis consequat efficitur magna, non dignissim mauris imperdiet eget.
+Repositories can be classified differently according to:
 
-Ut egestas metus ut ante luctus, tristique malesuada ante pretium. Mauris aliquet consectetur eros, eget mollis augue congue sollicitudin. Mauris iaculis metus vitae felis hendrerit, ac tempus tortor vestibulum. Proin ullamcorper, metus sed ultrices molestie, velit nulla feugiat odio, a fermentum erat sem quis sem. Maecenas pharetra mauris non luctus hendrerit. Donec non mauris blandit, fringilla lacus sed, porttitor sem. Integer a ante massa. Morbi rhoncus quis odio in maximus. Nullam mollis pulvinar condimentum. Nunc nulla magna, porttitor a porttitor id, suscipit non nibh. Fusce blandit purus maximus felis egestas imperdiet. Donec quis convallis nibh.
+- the type of objects to be stored (e.g. publications or research data),
+- the domain of the data contained (institutional, subject-specific or generic),
+- the storage period of the data (e.g. at least 10 years) or
+- the data access and -reuse policy
 
-Cras dictum pharetra lectus, a laoreet nulla commodo at. Proin aliquet risus eu nisi tempus, non lobortis mauris tristique. Vivamus at libero a risus ornare commodo. Integer in ante vestibulum, feugiat dolor at, blandit dui. Sed at dui non erat hendrerit ornare sit amet at lorem. Sed sed urna sodales, hendrerit elit sit amet, auctor turpis. Proin lobortis urna nec pulvinar iaculis. Morbi vel mollis erat, ut finibus eros. Phasellus in pharetra dui. Etiam vel ultricies tellus, in mollis ante. Aenean vel lectus odio. Ut tincidunt vel neque non faucibus. Mauris pulvinar velit fermentum, fermentum urna ac, ornare turpis. Integer vel tristique orci. Nulla malesuada mattis erat sed condimentum. Cras dui libero, iaculis a fringilla eget, luctus a diam.
+Repositories can be an institutional publication server, a subject-specific Open Access (OA) repository, a subject-specific data repository or a long-term archive for data and publications.
 
-Integer cursus ipsum quis turpis feugiat, in elementum odio porta. Nulla nec ligula metus. Aliquam varius nisi nec mauris bibendum tristique. Maecenas vel elit ac leo suscipit facilisis eget non est. Donec aliquam suscipit erat. Praesent at odio et magna vestibulum euismod a eu nunc. Sed tristique id sapien quis aliquet. Suspendisse ac odio volutpat, mattis odio at, aliquam mauris. Curabitur ac nisl vitae ante interdum auctor vel sed ex. Donec ac accumsan magna. Sed orci justo, commodo dictum nibh vel, vestibulum posuere metus. Proin mollis sapien at libero tempor porttitor. Quisque quis risus posuere, varius diam sed, consectetur risus.
+## How do repositories work?
 
-Nunc arcu leo, porta ac laoreet vitae, blandit eget elit. Vestibulum id augue ullamcorper, interdum magna nec, cursus odio. Donec quam justo, posuere sit amet ligula sit amet, pharetra pellentesque dolor. Nullam ante dui, porta vitae auctor eget, accumsan ut mauris. Nunc finibus malesuada accumsan. Sed at libero a ex sollicitudin aliquam. Donec in ante eget nisi cursus euismod. Fusce lorem justo, mollis quis commodo in, pulvinar at libero.
+Curators proof-check data before **ingestion** in the repository, with regard to their content or quality, and, sometimes, also regarding their legal aspects (copyright, data protection) and ensure that the data are directly available to data-users.
+
+A repository is constituted by repository software and a database. Data providers can transfer the data to the repository typically via a web-based user interface, or the repository operators collect (**harvest**) the data automatically from other platforms via appropriate protocols and interfaces.
+
+In order to allow data re-use by third parties, **[metadata](/docs/topics/metadata)** are required beside the actual data. They describe the content of the research data and provide information about its creation, the software or methods used and legal aspects. Metadata can be either added manually or provided through other applications. The metadata should also include terms of use in the form of licences that regulate access to the data (registration, embargo, etc.).
+
+Usually repositories offer a search function with which users can find, view and download data. In order to ensure that data are permanently referenced and cited, repositories assign unique **[persistent identifiers](/docs/topics/pid)** (PIDs). 
+
+## Finding the right repository
+
+Because of the multitudes of data repositories existing, users could better orient themselves using a research data repository registry (e.g. **https://fairsharing.org/** or **https://www.re3data.org/**). Repository registry services are an essential component of the **[FAIR](/docs/topics/fair)** (**F**indable **A**ccessible **I**nteroperable **R**eusable)-strategy as they help researchers to navigate through thousands of data repository services to find the most suitable one to store and provide access to their research outputs as well as to enable them to search for and repurpose FAIR data created by others. DataCite's Repository Finder finds repositories that meet the criteria recommended by the Enabling FAIR Data Project. ROAR and OPENDOAR are directories that list Open Access repositories from all over the world.
+
+Repositories can also be certified (e.g. CoreTrustSeal).  Such certification ensures data users, among other things, that data will be usable, citable and preserved in the long run. 
+
+Nowadays more and more peer review journals mandate authors to deposit their data into repositories (e.g. figshare) prior to manuscript submission. If authors do not comply with these rules, the review process is not initiated.
+
+## Repositories for Chemistry
+
+In the field of synthetic and analytical chemistry, the repository **[Chemotion](https://www.chemotion-repository.net/welcome)** was developed aiming to fill the existing gap for the preservation and publication of experimental work. Chemotion supports scientists in depositing and sharing data in a structured and transparent way. It is free of charge and its software code is available on GitHub. It uses available standardised identifiers such as the reaction **InChI** (RInChI and RInChIKey). In addition, it is possible to transfer data from an Open Source **[Electronic Laboratory Notebook](/docs/topics/eln)** (ELN) into the workspace area of the repository. The main advantages of the Chemotion repository are:
+
+- comprehensive functionality for the collection, preparation and reuse of data using discipline specific methods and data processing tools
+- existence of automated procedures to ease data curation
+- provision of functions for a seamless publication and citation of deposited data
+- support of **[Digital Object Identifier](/docs/topics/pid)** (DOI) generation, the comparison of the submissions with PubChem instances, and workflows for peer reviewing of the submissions including embargo settings
+
+## References/ further reading:
+- [Forschungsdaten.info](https://www.forschungsdaten.info/themen/veroeffentlichen-und-archivieren/repositorien/)
+- https://www.rd-alliance.org/groups/repository-platforms-research-data.html
+- https://www.dcc.ac.uk/events/fairsfair-repository-support-series-using-registries-improve-visibility-your-repository
+- The Repository Chemotion: Infrastructure for Sustainable Research in Chemistry,<br/>https://doi.org/10.1002/anie.202007702
+- Chemotion ELN: an Open Source electronic lab notebook for chemists in academia,<br/>https://doi.org/10.1186/s13321-017-0240-0
