--- a/docs/40_topics/100_pid.mdx
+++ b/docs/40_topics/100_pid.mdx
@@ -15,15 +15,21 @@ The main benefits of PIDs for chemistry researchers are increased findability, v
 
 ## DOIs
 
-Digital Object Identifiers are open and non-proprietary PIDs for objects such as  publications and datasets but also physical objects which are assigned by members of the International DOI Foundation.<sup><a href="https://doi.org/10.1081/E-ELIS3-120044418">8</a>,<a href="https://doi.org/10.2481/dsj.4.12">9</a></sup> Most well-recognised DOI registration agencies include CrossRef for publications and DataCite focusing on datasets.<sup><a href="https://doi.org/10.1109/COINFO.2009.66">10</a></sup>             
+<img align="left" src="img/DOI_logo.svg" width="90" alt="DOI logo">
+
+Digital Object Identifiers are open and non-proprietary PIDs for objects such as  publications and datasets but also physical objects which are assigned by members of the International DOI Foundation.<sup><a href="https://doi.org/10.1081/E-ELIS3-120044418">8</a>,<a href="https://doi.org/10.2481/dsj.4.12">9</a></sup> Most well-recognised DOI registration agencies include CrossRef for publications and DataCite focusing on datasets.<sup><a href="https://doi.org/10.1109/COINFO.2009.66">10</a></sup> 
 
 A DOI consists of a character string divided in to two parts by a slash. The prefix identifies the registrant, who retrieves a DOI from a DOI registration agency and always starts with “10.”. Every registrant has its own unique prefix. The suffix identifies a specific object registered by a registrant via a registration agency. DOIs are most frequently displayed as an URL like https://doi.org/10.1000/182 including a resolver as HTTP proxy server to redirect to the linked object.<sup><a href="https://doi.org/10.1081/E-ELIS3-120044418">11</a></sup>
+
+<p align="center"><img src="https://assets.crossref.org/logo/crossref-logo-landscape-200.svg" width="200" alt="Crossref logo"><img src="img/datacite.svg" class="align-center" width="200" alt="DataCite logo"></p>
 
 DOIs are standardised by the International Organisation for Standardisation (ISO) in ISO 26324.<sup><a href="https://www.iso.org/standard/43506.html">12</a></sup>
 
 Registrants are liable to update the URL connected to the DOI if the object is moved, which is enabled by metadata attached to the DOI during registration.<sup><a href="https://support.datacite.org/docs/doi-registration-policy">13</a></sup>
 
 ## ORCID iDs
+
+<img align="left" src="img/ORCIDiD_iconvector.svg" width="90" alt="ORCID logo"> 
 
 ORCID iDs are open and non-proprietary PIDs for authors also described as unique author identifiers and can be retrieved and used by any author free of charge. It is provided by the non-profit Open Research and Contributors ID organisation, ORCID Inc., and sustained by fees of member organisations, providing extended application program interfaces (API) for their members to integrate ORCID iDs.<sup><a href="https://doi.org/10.1087/20120404">14</a></sup>
 
