--- a/docs/40_topics/01_fair.mdx
+++ b/docs/40_topics/01_fair.mdx
@@ -3,6 +3,10 @@ title: "FAIR Data Principles"
 ---
 # FAIR Data Principles
 
+<img alt="FAIR Data" src='/static/img/FAIR_data_principles.jpg' width="250" align="right" vspace="10" hspace="10" />
+
+Image Attribution: SangyaPundir, [CC BY-SA 4.0](https://creativecommons.org/licenses/by-sa/4.0)] via Wikimedia Commons
+
 ## Introduction
 
 The [FAIR Data Principles](https://doi.org/10.1038/sdata.2016.1) were published after being defined at the [Lorentz Workshop](https://www.lorentzcenter.nl/) in 2014.
