--- a/docs/40_topics/01_fair.mdx
+++ b/docs/40_topics/01_fair.mdx
@@ -3,9 +3,9 @@ title: "FAIR Data Principles"
 ---
 # FAIR Data Principles
 
-<img alt="FAIR Data" src='/static/img/FAIR_data_principles.jpg' width="250" align="right" vspace="10" hspace="10" />
+<img alt="FAIR Data" src='/static/img/FAIR_data_principles.jpg' />
 
-Image Attribution: SangyaPundir, [CC BY-SA 4.0](https://creativecommons.org/licenses/by-sa/4.0)] via Wikimedia Commons
+Image Attribution: SangyaPundir, [CC BY-SA 4.0](https://creativecommons.org/licenses/by-sa/4.0)]
 
 ## Introduction
 
