--- a/docs/40_topics/01_fair.mdx
+++ b/docs/40_topics/01_fair.mdx
@@ -1,11 +1,11 @@
 ---
 title: "FAIR Data Principles"
 ---
-# FAIR Data Principles
+# FAIR Data Principle
 
-<img alt="FAIR Data" src='/static/img/FAIR_data_principles.jpg' />
+<img alt="FAIR Data" src='/static/img/FAIR_data_principles.jpg'>
 
-Image Attribution: SangyaPundir, [CC BY-SA 4.0](https://creativecommons.org/licenses/by-sa/4.0)]
+Image Attribution: SangyaPundir, [CC BY-SA 4.0](https://creativecommons.org/licenses/by-sa/4.0)
 
 ## Introduction
 
