added FAIR image and small spelling fix

--- a/docs/40_topics/01_fair.mdx
+++ b/docs/40_topics/01_fair.mdx
@@ -1,7 +1,7 @@
 ---
 title: "FAIR Data Principles"
 ---
-# FAIR Data Principle
+# FAIR Data Principles
 
 <img alt="FAIR Data" src='/static/img/FAIR_data_principles.jpg'>
 
