--- a/docs/40_topics/100_pid.mdx
+++ b/docs/40_topics/100_pid.mdx
@@ -12,7 +12,6 @@ Additionally, the Research Organization Registry (ROR) is used to identify resea
 
 The main benefits of PIDs for chemistry researchers are increased findability, visibility and ease of access of their scientific work.<sup><a href="https://doi.org/10.5334/dsj-2017-009">7</a></sup> In the context of research data, PIDs are especially useful to interconnect publications and datasets in repositories.
 
-
 ## DOIs
 
 <img align="left" src="img/DOI_logo.svg" width="90" alt="DOI logo">
@@ -21,7 +20,7 @@ Digital Object Identifiers are open and non-proprietary PIDs for objects such as
 
 A DOI consists of a character string divided in to two parts by a slash. The prefix identifies the registrant, who retrieves a DOI from a DOI registration agency and always starts with “10.”. Every registrant has its own unique prefix. The suffix identifies a specific object registered by a registrant via a registration agency. DOIs are most frequently displayed as an URL like https://doi.org/10.1000/182 including a resolver as HTTP proxy server to redirect to the linked object.<sup><a href="https://doi.org/10.1081/E-ELIS3-120044418">11</a></sup>
 
-<p align="center"><img src="https://assets.crossref.org/logo/crossref-logo-landscape-200.svg" width="200" alt="Crossref logo"><img src="img/datacite.svg" class="align-center" width="200" alt="DataCite logo"></p>
+<img src="https://assets.crossref.org/logo/crossref-logo-landscape-200.svg" width="200" alt="Crossref logo"><img src="img/datacite.svg" class="align-center" width="200" alt="DataCite logo">
 
 DOIs are standardised by the International Organisation for Standardisation (ISO) in ISO 26324.<sup><a href="https://www.iso.org/standard/43506.html">12</a></sup>
 
